--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'DS'
 - !lcsh 'Palestine -- Description and travel'
 - !lcsh 'Syria -- Description and travel'
+- GITenberg
 title: Travels in Syria and the Holy Land
 url: http://www.gutenberg.org/ebooks/8884
